# YoutubeCloudDownloader

./: .dockerignore  .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  main.py  pyproject.toml
scripts/: remote-clear-media.sh
static/: index.html
