[project]
name = "youtube-audio-downloader"
version = "0.1.0"
description = "YouTube audio downloader supporting single videos and playlists"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2024.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[tool.uv]
package = false
